# 24V-power-board

./: .gitignore  CMakeLists.txt  platformio.ini  run.sh
mock/: handle_heartbeat.cpp  main.cpp  pdu.cpp
src/: assertion.cpp  channel_control.cpp  channel_control.h  channel_control.hpp  defaults.h  error_handling.cpp  error_handling.hpp  handle_heartbeat.cpp  main.cpp  pinout.h  sdc.h
src/canzero/: canzero.c  canzero.cpp  canzero.h
src/firmware/: pdu24.cpp  pdu24.hpp
src/fsm/: error_handling.cpp  error_handling.hpp  fsm.cpp  fsm.hpp
src/util/: metrics.h  timestamp.h  timing.h
